# autonormalize

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1.webarchive  Appointment-Noshow-Demo.ipynb  Autonormalize.md  DEMO CRIME.ipynb  DEMO FOOD.ipynb  DEMO LIQUOR.ipynb  DEMO POLLUTION.ipynb  Demo.ipynb  LICENSE  MANIFEST.in  MANIFEST.in.rtf  MANIFEST.in.txt  Makefile  README.md  RELEASE.MD  Untitled.ipynb  classes.py  contributing.md  dev-requirements.txt  dfd.py  example_3  example_data_gen.py  ft customer demo.ipynb  make new index example.ipynb  make new index.ipynb  normalize.py  presentation.key  pyproject.toml  pyspy.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_classes.py  test_dfd.py  test_example.py  test_normalize.py  (+2 more)
.circleci/: config.yml
.github/: main.workflow
.github/workflows/: build_docs.yml  entry_point_test.yml  lint_check.yml  release.yml  release_notes_updated.yml  tests.yml  unit_tests_with_latest_deps.yml  unit_tests_with_latest_deps.yml .yaml
.ipynb_checkpoints/: Demo-checkpoint.ipynb  Untitled-checkpoint.ipynb
autonormalize/: .gitignore  __init__.py  autonormalize.py  classes.py  dfd.py  normalize.py  pyspy.py  pyspy2.py  split.ipynb  user_interaction.py
autonormalize/demos/: AutoNormalize + FeatureTools Demo.ipynb  DEMO CRIME.ipynb  DEMO FOOD.ipynb  DEMO LIQUOR.ipynb  Editing Dependnecies Demo.ipynb  Kaggle Food  Dataset Demo.ipynb  Kaggle Liquor Sales Dataset Demo.ipynb  ft customer demo.ipynb
autonormalize/examples/: example_1  example_2  example_data_gen.py  script.py
autonormalize/tests/: test_classes.py  test_dfd.py  test_example.py  test_normalize.py  test_version.py
docs/: CNAME  Makefile  make.bat  requirements.txt
docs/source/: api_reference.rst  changelog.rst  conf.py  index.ipynb  index.rst  install.rst  release_notes.rst  set-headers.py
docs/source/_templates/: layout.html
docs/source/guides/: editing_dependencies.ipynb  kaggle_food_dataset.ipynb  kaggle_liquor_sales_dataset.ipynb
docs/source/guides/demo/: __init__.py
docs/source/guides/demo/food/: __init__.py
docs/source/guides/demo/liquor/: Iowa_Liquor_Sales.csv  __init__.py
release/: upload.sh
