[project]
name = "autonormalize"
readme = "README.md"
description = "a library for automated table normalization"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
authors = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
maintainers = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
keywords = ["feature engineering", "data science", "machine learning", "normalization"]
license = {text = "BSD 3-clause"}
requires-python = ">=3.8,<4"
dependencies = [
    "featuretools >= 1.0.0",
    "numpy >= 1.13.3",
    "pandas >= 0.23.0",
    "tqdm >= 4.19.2",
    "graphviz >= 0.8.4",
]

[project.urls]
"Source Code"= "https://github.com/alteryx/autonormalize/"
"Issue Tracker" = "https://github.com/alteryx/autonormalize/issues"
"Twitter" = "https://twitter.com/alteryxoss"
"Chat" = "https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA"

[project.optional-dependencies]
test = [
    "pytest >= 5.2.0",
    "pytest-cov >= 2.6.1",
    "pytest-xdist >= 1.26.1",
]
dev = [
    "flake8 == 5.0.4",
    "isort == 5.10.1",
    "black[jupyter] == 22.6.0",
    "pre-commit == 2.20.0",
    "nbsphinx == 0.8.10",
    "pydata-sphinx-theme == 0.12.0",
    "Sphinx == 5.3.0",
    "nbconvert == 7.2.6",
    "ipython == 8.7.0",
    "pygments == 2.13.0",
    "jupyter == 1.0.0",
    "pandoc == 2.3",
    "ipykernel == 6.19.2",
    "matplotlib == 3.6.2",
    "featuretools[test]",
]
updater = [
    "alteryx-open-src-update-checker >= 2.1.0"
]

[tool.setuptools]
include-package-data = true
license-files = [
    "LICENSE",
]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
    "docs/*"
]

[tool.setuptools.dynamic]
version = {attr = "autonormalize.version.__version__"}


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "autonormalize/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.isort]
profile = "black"
forced_separate = "autonormalize"
known_first_party = "autonormalize"
skip = "__init__.py"
filter_files = true
multi_line_output = 3

[tool.black]
target-version = ['py310']

[tool.coverage.run]
source = ["autonormalize"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]
[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
