[tool:pytest]
python_files = autonormalize/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate=autonormalize
multi_line_output=3
