[metadata]
description-file = README.md
[tool:pytest]
addopts = --doctest-modules
python_files = autonormalize/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504
per-file-ignores =
    **/__init__.py:F401
[aliases]
test=pytest
[isort]
multi_line_output=3
known_third_party=numpy,pandas,pytest
